--- a/NanoMemoryUtil/NanoMemoryUtil.csproj
+++ b/NanoMemoryUtil/NanoMemoryUtil.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{FC06DE81-2905-49F1-A4BA-F162B7514A31}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>WarInTheNorthTrainer</RootNamespace>
-    <AssemblyName>WarInTheNorthTrainer</AssemblyName>
+    <RootNamespace>NanoMemUtil</RootNamespace>
+    <AssemblyName>NanoMemUtil</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -101,12 +101,13 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Code\ListViewBehaviors.cs" />
+    <Compile Include="Code\MemoryExplorer.cs" />
     <Compile Include="Code\MVVM\IView.cs" />
     <Compile Include="Code\MVVM\Navigator.cs" />
     <Compile Include="Code\MVVM\PresenterBase.cs" />
     <Compile Include="Code\WinAPI.cs" />
     <Compile Include="Properties\Annotations.cs" />
-    <Compile Include="UI\MemoryDTO.cs" />
+    <Compile Include="Code\MemoryDTO.cs" />
     <Compile Include="UI\MemPresenter.cs" />
     <Compile Include="UI\MemView.xaml.cs">
       <DependentUpon>MemView.xaml</DependentUpon>
